[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/atlasica/dock/view_list/ViewItemList.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/atlasica/dock/view_orphan/ViewItemOrphan.gd" type="Script" id=2]

[node name="ViewItemOrphan" instance=ExtResource( 1 )]
margin_right = 504.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 38 )
custom_constants/margin_left = 0
script = ExtResource( 2 )

[node name="HBoxContainer" parent="." index="0"]
margin_left = 0.0
margin_right = 504.0
margin_bottom = 38.0

[node name="TextureRect" parent="HBoxContainer" index="0"]
margin_right = 38.0
margin_bottom = 38.0
rect_min_size = Vector2( 38, 38 )
rect_pivot_offset = Vector2( 19, 19 )

[node name="Label" parent="HBoxContainer" index="1"]
margin_left = 42.0
margin_top = 12.0
margin_right = 297.0
margin_bottom = 26.0
size_flags_horizontal = 3

[node name="ButtonReveal" type="Button" parent="HBoxContainer" index="2"]
margin_left = 301.0
margin_top = 9.0
margin_right = 445.0
margin_bottom = 29.0
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Reveal in FileSystem"

[node name="ButtonDelete" type="Button" parent="HBoxContainer" index="3"]
margin_left = 449.0
margin_top = 9.0
margin_right = 504.0
margin_bottom = 29.0
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Delete"

[node name="ButtonDeleteSure" type="Button" parent="HBoxContainer" index="4"]
visible = false
margin_left = 348.0
margin_top = 9.0
margin_right = 417.0
margin_bottom = 29.0
size_flags_horizontal = 0
size_flags_vertical = 4
text = "I'm sure!"

[node name="ButtonDeleteNotSure" type="Button" parent="HBoxContainer" index="5"]
visible = false
margin_left = 421.0
margin_top = 9.0
margin_right = 504.0
margin_bottom = 29.0
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Nevermind"

[node name="SpriteDragger" parent="." index="1"]
visible = false
margin_left = 0.0
margin_right = 504.0
margin_bottom = 38.0
[connection signal="pressed" from="HBoxContainer/ButtonReveal" to="." method="_on_ButtonReveal_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonDelete" to="." method="_on_ButtonDelete_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonDeleteSure" to="." method="_on_ButtonDeleteSure_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonDeleteNotSure" to="." method="_on_ButtonDeleteNotSure_pressed"]
